dataset1235/2025-2/2318198438/users/1240871306/executions/1897677159_1626817775.log
== RUN (2025-08-27 22:21:50)
-- CODE: 
r = float(input())
area do circulo = math.pi * r**2
volume da espe = 94/30 * math.pi * r**3

print(round(areado_circulo, 3)
print(round(volume_ esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:21:52)
-- CODE: 
r = float(input())
area do circulo = math.pi * r**2
volume da espe = 94/30 * math.pi * r**3

print(round(areado_circulo, 3)
print(round(volume_ esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:21:18)
-- CODE: 
r = float(input())
area do circulo = math.pi * r**2
volume da espe = 94/30 * math.pi * r**3

print(round(areado circulo, 3)
     print(round(volume_ esfera, 3)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:21:21)
-- CODE: 
r = float(input())
area do circulo = math.pi * r**2
volume da espe = 94/30 * math.pi * r**3

print(round(areado circulo, 3)
     print(round(volume_ esfera, 3)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:21:30)
-- CODE: 
r = float(input())
area do circulo = math.pi * r**2
volume da espe = 94/30 * math.pi * r**3

print(round(areado circulo, 3)
     print(round(volume_ esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:21:17)
-- CODE: 
r = float(input())
area do circulo = math.pi * r**2
volume da espe = 94/30 * math.pi * r**3

print(round(areado circulo, 3)
     print(round(volume_ esfera, 3)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:21:31)
-- CODE: 
r = float(input())
area do circulo = math.pi * r**2
volume da espe = 94/30 * math.pi * r**3

print(round(areado circulo, 3)
     print(round(volume_ esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 2
    area do circulo = math.pi * r**2
         ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
